--- a/production.ini
+++ b/production.ini
@@ -14,6 +14,10 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_tm
 
+tm.attempts = 3
+mongodb.uri = mongodb://localhost/resume
+
+
 ###
 # wsgi server configuration
 ###
